final_errors.txt
    Checking fantasmagorie v0.1.0 (E:\Projects\FantasmagorieRust)
warning: unused import: `crate::core::Vec2`
 --> src\view\animation.rs:4:5
  |
4 | use crate::core::Vec2;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Vec2`
 --> src\widgets\knob.rs:2:27
  |
2 | use crate::core::{ColorF, Vec2};
  |                           ^^^^

warning: unused import: `ViewType`
 --> src\widgets\knob.rs:3:39
  |
3 | use crate::view::header::{ViewHeader, ViewType};
  |                                       ^^^^^^^^

warning: unused import: `crate::widgets::UIContext`
 --> src\widgets\knob.rs:4:5
  |
4 | use crate::widgets::UIContext; // Needed? UIContext returns the builder
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::cell::Cell`
 --> src\widgets\knob.rs:5:5
  |
5 | use std::cell::Cell;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `Vec2`
 --> src\widgets\fader.rs:2:27
  |
2 | use crate::core::{ColorF, Vec2};
  |                           ^^^^

warning: unused import: `ViewType`
 --> src\widgets\fader.rs:3:39
  |
3 | use crate::view::header::{ViewHeader, ViewType};
  |                                       ^^^^^^^^

warning: unused import: `std::cell::Cell`
 --> src\widgets\fader.rs:4:5
  |
4 | use std::cell::Cell;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: `ColorF` and `Vec2`
 --> src\widgets\dragger.rs:2:19
  |
2 | use crate::core::{ColorF, Vec2};
  |                   ^^^^^^  ^^^^

warning: unused import: `ViewType`
 --> src\widgets\dragger.rs:3:39
  |
3 | use crate::view::header::{ViewHeader, ViewType};
  |                                       ^^^^^^^^

warning: unused import: `std::cell::Cell`
 --> src\widgets\dragger.rs:4:5
  |
4 | use std::cell::Cell;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `Vec2`
 --> src\widgets\plot.rs:2:27
  |
2 | use crate::core::{ColorF, Vec2};
  |                           ^^^^

warning: unused import: `ViewType`
 --> src\widgets\plot.rs:3:39
  |
3 | use crate::view::header::{ViewHeader, ViewType};
  |                                       ^^^^^^^^

warning: unused import: `std::cell::Cell`
 --> src\widgets\plot.rs:4:5
  |
4 | use std::cell::Cell;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `Duration`
  --> src\devtools\profiler.rs:10:17
   |
10 | use std::time::{Duration, Instant};
   |                 ^^^^^^^^

error[E0599]: no method named `draw_quad_pass_no_submit` found for mutable reference `&mut WgpuBackend` in the current scope
   --> src\backend\wgpu.rs:440:22
    |
440 |                 self.draw_quad_pass_no_submit(&mut render_pass, Vec2::ZERO, Vec2::new(width as f32, height as f32), ColorF::white());
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `&mut WgpuBackend`

warning: unused variable: `desc`
   --> src\core\undo.rs:243:17
    |
243 |             let desc = cmd.description().to_string();
    |                 ^^^^ help: if this is intentional, prefix it with an underscore: `_desc`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `desc`
   --> src\core\undo.rs:255:17
    |
255 |             let desc = cmd.description().to_string();
    |                 ^^^^ help: if this is intentional, prefix it with an underscore: `_desc`

warning: unused variable: `id`
  --> src\widgets\mod.rs:22:21
   |
22 |     pub fn id(self, id: impl Into<ID>) -> Self {
   |                     ^^ help: if this is intentional, prefix it with an underscore: `_id`

warning: variable does not need to be mutable
  --> src\text\markdown.rs:40:9
   |
40 |     let mut flush = |spans: &mut Vec<TextSpan>, in_bold: bool, in_italic: bool, buffer: &mut String| {
   |         ----^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `remainder`
  --> src\text\markdown.rs:89:17
   |
89 |             let remainder = &input[i..]; // Note: byte indexing vs char indexing mismatch risk here. 
   |                 ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_remainder`

warning: unused variable: `rect_loc`
   --> src\backend\opengl.rs:340:13
    |
340 |         let rect_loc = gl.get_uniform_location(program, "u_rect");
    |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_rect_loc`

warning: unused variable: `radii_loc`
   --> src\backend\opengl.rs:341:13
    |
341 |         let radii_loc = gl.get_uniform_location(program, "u_radii");
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_radii_loc`

warning: unused variable: `border_width_loc`
   --> src\backend\opengl.rs:342:13
    |
342 |         let border_width_loc = gl.get_uniform_location(program, "u_border_width");
    |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_border_width_loc`

warning: unused variable: `border_color_loc`
   --> src\backend\opengl.rs:343:13
    |
343 |         let border_color_loc = gl.get_uniform_location(program, "u_border_color");
    |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_border_color_loc`

warning: unused variable: `elevation_loc`
   --> src\backend\opengl.rs:344:13
    |
344 |         let elevation_loc = gl.get_uniform_location(program, "u_elevation");
    |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_elevation_loc`

warning: unused variable: `glow_strength_loc`
   --> src\backend\opengl.rs:345:13
    |
345 |         let glow_strength_loc = gl.get_uniform_location(program, "u_glow_strength");
    |             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_glow_strength_loc`

warning: unused variable: `glow_color_loc`
   --> src\backend\opengl.rs:346:13
    |
346 |         let glow_color_loc = gl.get_uniform_location(program, "u_glow_color");
    |             ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_glow_color_loc`

warning: unused variable: `is_squircle_loc`
   --> src\backend\opengl.rs:347:13
    |
347 |         let is_squircle_loc = gl.get_uniform_location(program, "u_is_squircle");
    |             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_squircle_loc`

warning: unused variable: `offset_loc`
   --> src\backend\opengl.rs:348:13
    |
348 |         let offset_loc = gl.get_uniform_location(program, "u_offset");
    |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_offset_loc`

warning: unused variable: `scale_loc`
   --> src\backend\opengl.rs:349:13
    |
349 |         let scale_loc = gl.get_uniform_location(program, "u_scale");
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_scale_loc`

warning: unused variable: `passes`
   --> src\backend\opengl.rs:660:21
    |
660 |                 let passes = (*sigma as i32).clamp(1, 8);
    |                     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_passes`

warning: unused variable: `uv_scale`
   --> src\backend\opengl.rs:661:21
    |
661 |                 let uv_scale = Vec2::new(1.0 / w as f32, 1.0 / h as f32);
    |                     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_uv_scale`

For more information about this error, try `rustc --explain E0599`.
warning: `fantasmagorie` (lib) generated 32 warnings
error: could not compile `fantasmagorie` (lib) due to 1 previous error; 32 warnings emitted
